# parker-image-tools

./: .gitignore  Dockerfile.railway  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
app/: web.py
app/images/: read.py
app/images/process/: core.py
backend/: Dockerfile  Dockerfile.railway  web.py
backend/images/process/: core.py
static/: main.css  main.js
static/fonts/din_condensed/: style.css
templates/: index.html
